--- a/content/articles/2018-09-23_gnucash.md
+++ b/content/articles/2018-09-23_gnucash.md
@@ -1,6 +1,6 @@
 Title: Gnucash
 Date: 2018-09-23
-Tags: FOSS, Accounting, Software
+Tags: FOSS, Accounting, Software, Gnucash
 Summary: Gnucash - Personal Finance Software
 Image: origin/gnucash.png
 
